--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.5.17",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "axios": "^0.18.1",
+    "es6-promise": "^4.2.6",
+    "vee-validate": "^2.2.9",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   }
 }
